--- a/src/TheWorld2/Views/App/Index.cshtml
+++ b/src/TheWorld2/Views/App/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{ 
+﻿@model IEnumerable<TheWorld2.Models.Trip>
+
+@{ 
     ViewBag.Title = "Home page";
 }
 
@@ -25,5 +27,12 @@
 
     <div class="col-md-6">
         <h3>The map</h3>
+        <ul>
+            @foreach (var trip in Model)
+            {
+                <li>@trip.Name (@trip.Created.ToShortDateString())</li>
+
+            }
+        </ul>
     </div>
 </div>
