--- a/src/TheWorld2/Views/App/Index.cshtml
+++ b/src/TheWorld2/Views/App/Index.cshtml
@@ -4,35 +4,8 @@
     ViewBag.Title = "Home page";
 }
 
-<div class="row">
-    <div class="col-md-6">
-        <h3>This is the world page</h3>
-
-        <form>
-            <div class="form-group">
-                <label>Date</label>
-                <input class="form-control"/>
-            </div>
-
-            <div class="form-group">
-                <label>Location</label>
-                <input class="form-control"/>
-            </div>
-
-            <div>
-                <input type="submit" value="Add" class="btn btn-success"/>
-            </div>
-        </form>
-    </div>
-
-    <div class="col-md-6">
-        <h3>The map</h3>
-        <ul>
-            @foreach (var trip in Model)
-            {
-                <li>@trip.Name (@trip.Created.ToShortDateString())</li>
-
-            }
-        </ul>
-    </div>
+<div class="col-md-12">
+    <h3>Welcome to the World Travel Map page</h3>
+    <p>This page will allow you to plan your trip</p>
+    <a asp-controller="App" asp-action="trips" class="btn btn-lg btn-success">View your trips</a>
 </div>
