--- a/src/TheWorld2/Views/Shared/_Layout.cshtml
+++ b/src/TheWorld2/Views/Shared/_Layout.cshtml
@@ -12,13 +12,23 @@
 </head>
 <body>
     <div id="sidebar">
-        <img src="~/img/tiger.jpg" alt="Tiger" class="headshot" />
-        <span id="userName">An Tran</span>
-
+        @if (User.Identity.IsAuthenticated)
+        {
+            <img src="~/img/tiger.jpg" alt="Tiger" class="headshot" />
+            <span id="userName">@User.Identity.Name</span>
+        }
+        
         <ul class="nav">
             <li class="active"><a asp-controller="App" asp-action="Index">Home</a></li>
             <li><a asp-controller="App" asp-action="About">About</a></li>
             <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
+
+            @if (User.Identity.IsAuthenticated)
+            {
+                <li><a asp-controller="App" asp-action="Trips">My Trips</a></li>
+                <li><a asp-controller="Auth" asp-action="Logout">Log out</a></li>
+            }
+            
         </ul>
     </div>
 
